fix: remove site scroll by setting overflow-hidden
Update globals.css for html and body to prevent scrolling
Updated version to 1.7.0

--- a/app/globals.css
+++ b/app/globals.css
@@ -118,7 +118,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+  /* Adicionando overflow-hidden no html e body para remover scroll */
+  html,
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-hidden h-screen;
   }
 }
